adding likes for external recipes , fix yaml file
